--- a/Ai/templates/index.html
+++ b/Ai/templates/index.html
@@ -84,7 +84,7 @@
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ message })
             }).then(() => {
-                const eventSource = new EventSource('/api/stream-response/');
+                const eventSource = new EventSource('/api/chat/');
                 let finalMessage = '';
 
                 eventSource.onmessage = (event) => {
